--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
    <a href = "Task 1.html">HTML Task 1</a>
-   <a href = "Task 2,3.html">HTML Task 2 and 3</a>
+   <a href = "Task 2,3.html">HTML Task 2,3</a>
    <a href = "HTML/HTML Task4/HTML task4.html">HTML Task 4</a>
    <a href = "HTML/HTML Task5/HTML task5.html">HTML Task 5</a>
 
