--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
    <a href = "HTML task4.html">HTML Task 4</a>
    <a href = "HTML task5.html">HTML Task 5</a>
 
-   <a href = "CSS/CSS Task 1/task1.html">CSS Task 1</a>
-   <a href = "CSS/CSS Task 2/task2.html">CSS Task 2</a>
-   <a href = "CSS/CSS Task 3/task3.html">CSS Task 3</a>
-   <a href = "CSS/CSS Task 4/task4.html">CSS Task 4</a>
-   <a href = "CSS/CSS Task 5/task5.html">CSS Task 5</a>
-   <a href = "CSS/CSS Task 6/task6.html">CSS Task 6</a>
-   <a href = "CSS/CSS Task 7/task7.html">CSS Task 7</a>
+   <a href = "task1.html">CSS Task 1</a>
+   <a href = "task2.html">CSS Task 2</a>
+   <a href = "task3.html">CSS Task 3</a>
+   <a href = "task4.html">CSS Task 4</a>
+   <a href = "task5.html">CSS Task 5</a>
+   <a href = "task6.html">CSS Task 6</a>
+   <a href = "task7.html">CSS Task 7</a>
 </body>
 
 </html>
