--- a/index.html
+++ b/index.html
@@ -1,30 +1,167 @@
 <html>
 
 <head>
-    <title>Index</title>
-    <style>
-        body {
-            margin-top: 200px;
-            text-align: center;
-            font-size: x-large;
-            color: rgb(0, 140, 255);
-        }
-    </style>
+  <title>
+    Index Page
+  </title>
+  <style>
+    table,
+    th,
+    td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      text-align: center;
+    }
+
+    table.htmlcenter {
+      margin-top: 50px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    a {
+      color: blue;
+    }
+
+    table.csscenter {
+      margin-top: 50px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 </head>
 
 <body>
-   <a href = "Task 1.html">HTML Task 1</a>
-   <a href = "Task 2, 3.html">HTML Task 2,3</a>
-   <a href = "HTML task4.html">HTML Task 4</a>
-   <a href = "HTML task5.html">HTML Task 5</a>
+  <h1 style="padding-left: 50%; padding-top: 20px;">
+    Index
+  </h1>
+  <table class="htmlcenter" style="width:30%">
 
-   <a href = "task1.html">CSS Task 1</a>
-   <a href = "task2.html">CSS Task 2</a>
-   <a href = "task3.html">CSS Task 3</a>
-   <a href = "task4.html">CSS Task 4</a>
-   <a href = "task5.html">CSS Task 5</a>
-   <a href = "task6.html">CSS Task 6</a>
-   <a href = "task7.html">CSS Task 7</a>
+    <tr>
+      <th>Boot Strap Tasks</th>
+      <th>Links</th>
+    </tr>
+    <tr>
+      <td>BS Task 1</td>
+      <td>
+        <a href="./bstask1.html" target="_blank" style="padding-right: 10px;">
+            bstask1
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>BS Task 2</td>
+      <td>
+        <a href="./bstask2.html" target="_blank" style="padding-right: 10px;">
+            bstask2
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>BS Task 3</td>
+      <td>
+        <a href="./bstask3.html" target="_blank" style="padding-right: 10px;">
+            bstask3
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>BS Task 4</td>
+      <td>
+        <a href="./bstask4.html" target="_blank" style="padding-right: 10px;">
+            bstask4
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>BS Task 5</td>
+      <td>
+        <a href="./bstask5.html" target="_blank" style="padding-right: 10px;">
+            bstask5
+        </a>
+      </td>
+    </tr>
+    <tr>
+        <td>BS Task 6</td>
+        <td>
+          <a href="./bstask6.html" target="_blank" style="padding-right: 10px;">
+            bstask6
+          </a>
+        </td>
+    </tr>
+  </table>
+
+  <table class="csscenter" style="width:30%">
+
+    <tr>
+      <th>Java Script Tasks</th>
+      <th>Links</th>
+    </tr>
+    <tr>
+      <td>JS Task 1</td>
+      <td>
+        <a href="./jstask1.html" target="_blank" style="padding-right: 10px;">
+            jstask1
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 2</td>
+      <td>
+        <a href="./jstask2.html" target="_blank" style="padding-right: 10px;">
+            jstask2
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 3</td>
+      <td>
+        <a href="./jstask3.html" target="_blank" style="padding-right: 10px;">
+            jstask3
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 4</td>
+      <td>
+        <a href="./jstask4.html" target="_blank" style="padding-right: 10px;">
+            jstask4
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 5</td>
+      <td>
+        <a href="./jstask5.html" target="_blank" style="padding-right: 10px;">
+            jstask5
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 6</td>
+      <td>
+        <a href="./jstask6.html" target="_blank" style="padding-right: 10px;">
+            jstask6
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>JS Task 7</td>
+      <td>
+        <a href="./jstask7.html" target="_blank" style="padding-right: 10px;">
+            jstask7
+        </a>
+      </td>
+    </tr>
+    <tr>
+        <td>JS Task 8</td>
+        <td>
+          <a href="./jstask8.html" target="_blank" style="padding-right: 10px;">
+            jstask8
+          </a>
+        </td>
+      </tr>
+  </table>
 </body>
 
 </html>
