--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <tr>
       <td>BS Task 1</td>
       <td>
-        <a href="./bstask1.html" target="_blank" style="padding-right: 10px;">
+        <a href="BS/BS Task 1/bstask1.html" target="_blank" style="padding-right: 10px;">
             bstask1
         </a>
       </td>
