--- a/index.html
+++ b/index.html
@@ -162,6 +162,32 @@
         </td>
       </tr>
   </table>
+  <html>
+
+<head>
+    <title>Index</title>
+    <style>
+        body {
+            margin-top: 200px;
+            text-align: center;
+            font-size: x-large;
+            color: rgb(0, 140, 255);
+        }
+    </style>
+
+   <a href = "Task 1.html">HTML Task 1</a>
+   <a href = "Task 2, 3.html">HTML Task 2 and 3</a>
+   <a href = "HTML task4.html">HTML Task 4</a>
+   <a href = "HTML task5.html">HTML Task 5</a>
+
+   <a href = "task1.html">CSS Task 1</a>
+   <a href = "task2.html">CSS Task 2</a>
+   <a href = "task3.html">CSS Task 3</a>
+   <a href = "task4.html">CSS Task 4</a>
+   <a href = "Task5.html">CSS Task 5</a>
+   <a href = "task6.html">CSS Task 6</a>
+   <a href = "task7.html">CSS Task 7</a>
+
 </body>
 
 </html>
